--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "firebase": "^7.2.1",
     "gh-pages": "^2.1.1",
     "jquery": "^3.4.1",
     "node-sass": "^4.12.0",
