--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "eslint-plugin-prettier": "^3.1.1",
     "husky": "^3.0.9",
     "lint-staged": "^9.4.2",
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "react-select": "^3.0.8",
+    "react-tooltip": "^3.11.1"
   }
 }
