--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-spotify-api": "^2.4.0",
     "redux": "^4.0.4",
     "yarn": "^1.19.0"
   },
@@ -47,6 +48,7 @@
     "lint-staged": "^9.4.2",
     "prettier": "^1.18.2",
     "react-select": "^3.0.8",
-    "react-tooltip": "^3.11.1"
+    "react-tooltip": "^3.11.1",
+    "spotify-web-api-js": "^1.2.0"
   }
 }
