--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "3.0.1",
     "react-spotify-api": "^2.4.0",
     "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "yarn": "^1.19.0"
   },
   "scripts": {
