--- a/package.json
+++ b/package.json
@@ -4,20 +4,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.19.0",
-    "firebase": "^7.2.1",
-    "gh-pages": "^2.1.1",
+    "axios": "^0.19.2",
+    "firebase": "^7.8.1",
+    "gh-pages": "^2.2.0",
     "jquery": "^3.4.1",
-    "node-sass": "^4.12.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-redux": "^7.1.1",
-    "react-router-dom": "^5.0.1",
+    "node-sass": "^4.13.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.1",
     "react-spotify-api": "^2.4.0",
-    "redux": "^4.0.4",
+    "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "yarn": "^1.19.0"
+    "reselect": "^4.0.0",
+    "yarn": "^1.22.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,14 +44,14 @@
     ]
   },
   "devDependencies": {
-    "eslint-config-prettier": "^6.4.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "husky": "^3.0.9",
-    "lint-staged": "^9.4.2",
-    "prettier": "^1.18.2",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "husky": "^3.1.0",
+    "lint-staged": "^9.5.0",
+    "prettier": "^1.19.1",
     "react-select": "^3.0.8",
-    "react-tooltip": "^3.11.1",
-    "redux-form": "^8.2.6",
+    "react-tooltip": "^3.11.6",
+    "redux-form": "^8.3.0",
     "spotify-web-api-js": "^1.2.0"
   }
 }
